--- a/css/index.css
+++ b/css/index.css
@@ -1,20 +1,19 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('../fonts/icomoon.eot?6nd9y5');
-    src:  url('../fonts/icomoon.eot?6nd9y5#iefix') format('embedded-opentype'),
-      url('../fonts/icomoon.ttf?6nd9y5') format('truetype'),
-      url('../fonts/icomoon.woff?6nd9y5') format('woff'),
-      url('../fonts/icomoon.svg?6nd9y5#icomoon') format('svg');
+    src: url('../fonts/icomoon.eot?6nd9y5');
+    src: url('../fonts/icomoon.eot?6nd9y5#iefix') format('embedded-opentype'), url('../fonts/icomoon.ttf?6nd9y5') format('truetype'), url('../fonts/icomoon.woff?6nd9y5') format('woff'), url('../fonts/icomoon.svg?6nd9y5#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
+
 .main {
     width: 980px;
     height: 455px;
     margin-left: 220px;
     margin-top: 10px;
 }
+
 .focus {
     position: relative;
     float: left;
@@ -23,12 +22,14 @@
     background-color: purple;
     overflow: hidden;
 }
+
 .focus ul {
     position: absolute;
     top: 0;
     left: 0;
     width: 500%;
 }
+
 .focus ul li {
     float: left;
 }
@@ -49,6 +50,7 @@
     font-size: 18px;
     z-index: 2;
 }
+
 .arrow-r {
     right: 0;
 }
@@ -56,8 +58,10 @@
 .circle {
     position: absolute;
     bottom: 10px;
-    left: 50px;
+    left: 50%;
+    margin-left: -36px;
 }
+
 .circle li {
     float: left;
     width: 12px;
@@ -69,6 +73,7 @@
     /*鼠标经过显示小手*/
     cursor: pointer;
 }
+
 .current {
     background-color: #fff;
 }
@@ -78,54 +83,65 @@
     width: 250px;
     height: 455px;
 }
+
 .news {
     height: 165px;
-    border: 1px solid #e4e4e4; 
+    border: 1px solid #e4e4e4;
 }
+
 .news .news_hd {
     height: 33px;
     line-height: 33px;
     border-bottom: 1px dotted #e4e4e4;
     padding: 0 15px;
 }
+
 .news .news_hd h5 {
     float: left;
     font-size: 14px;
 }
+
 .news .news_hd .more {
     float: right;
 }
+
 .news_hd .more::after {
     font-family: 'icomoon';
     content: '\e903';
 }
+
 .news_bd {
-    padding: 5px  15px 0;
+    padding: 5px 15px 0;
 }
+
 .news_bd ul li {
     height: 24px;
     line-height: 24px;
     overflow: hidden;
     white-space: nowrap;
-    text-overflow: ellipsis;   
+    text-overflow: ellipsis;
 }
+
 .lifeservice {
     overflow: hidden;
     height: 209px;
     border: 1px solid #e4e4e4;
     border-top: 0;
 }
+
 .lifeservice ul {
     width: 252px;
 }
+
 .lifeservice ul li {
     float: left;
     width: 63px;
     height: 70px;
     border-right: 1px solid #e4e4e4;
-    border-bottom:1px solid #e4e4e4;
+    border-bottom: 1px solid #e4e4e4;
     text-align: center;
 }
+
 .lifeservice ul li i {
     display: inline-block;
     width: 24px;
@@ -134,49 +150,64 @@
     margin-top: 12px;
     background: url(../images/icons.png) no-repeat -17px -16px;
 }
+
 .lifeservice .t {
     background: url(../images/icons.png) no-repeat -79px -16px;
-    
 }
+
 .lifeservice .a {
     background: url(../images/icons.png) no-repeat -140px -16px;
 }
+
 .lifeservice .b {
     background: url(../images/icons.png) no-repeat -205px -16px;
 }
+
 .lifeservice .c {
     background: url(../images/icons.png) no-repeat -15px -88px;
 }
+
 .lifeservice .d {
     background: url(../images/icons.png) no-repeat -79px -88px;
 }
+
 .lifeservice .e {
     background: url(../images/icons.png) no-repeat -141px -88px;
 }
+
 .lifeservice .f {
     background: url(../images/icons.png) no-repeat -206px -16px;
 }
+
 .lifeservice .g {
     background: url(../images/icons.png) no-repeat -17px -159px;
 }
+
 .lifeservice .h {
     background: url(../images/icons.png) no-repeat -79px -159px;
 }
+
 .lifeservice .i {
     background: url(../images/icons.png) no-repeat -141px -156px;
 }
+
 .lifeservice .j {
     background: url(../images/icons.png) no-repeat -206px -159px;
 }
+
 .bargain {
     margin-top: 5px;
 }
+
+
 /* 推荐模块 */
+
 .recommend {
     height: 163px;
     background-color: #ebebeb;
     margin-top: 12px;
 }
+
 .recommend_hd {
     float: left;
     height: 163px;
@@ -185,9 +216,11 @@
     text-align: center;
     padding-top: 30px;
 }
+
 .recommend_bd {
     float: left;
 }
+
 .recommend_bd ul li {
     position: relative;
     float: left;
@@ -197,58 +230,67 @@
 
 .recommend_bd ul li:nth-child(-n+3)::after {
     content: '';
-    position:absolute;
+    position: absolute;
     right: 0;
     top: 10px;
     width: 1px;
     height: 145px;
     background-color: #dddddd;
 }
+
+
 /* 猜你喜欢模块 */
+
 .guess {
     height: 292px;
-    color:#ffffff;
+    color: #ffffff;
 }
+
 .guess_hd {
     position: relative;
     height: 60px;
-} 
+}
+
 .guess_hd h3 {
     float: left;
     padding-top: 31px;
     color: #333333;
     font-size: 18px;
-    
 }
+
 .guess_hd p {
     float: right;
     padding-top: 36px;
     padding-right: 44px;
     color: #000000;
 }
+
 .guess_hd p::after {
     position: absolute;
-    font-family:'icomoon';
+    font-family: 'icomoon';
     content: '\e905';
     right: 22px;
     top: 36px;
-
 }
+
 .guess_bd {
     float: left;
     height: 232px;
     background-color: skyblue;
 }
+
 .guess_bd ul li {
     position: relative;
     float: left;
     width: 200px;
     height: 232px;
 }
+
 .guess_bd ul li img {
     width: 200px;
     height: 232px;
 }
+
 .guess_bd ul li:nth-child(-n+5):after {
     content: '';
     position: absolute;
@@ -258,43 +300,55 @@
     height: 64px;
     background-color: #ededed;
 }
+
+
 /* 家用电器模块 */
+
 .box_hd {
     height: 30px;
     border-bottom: 2px solid #c81623;
 }
+
 .box_hd h3 {
     float: left;
     font-size: 18px;
     color: #c81623;
     font-weight: 400;
 }
+
 .tab_list {
-    float: right; 
-    line-height: 30px; 
+    float: right;
+    line-height: 30px;
 }
+
 .tab_list ul li {
     float: left;
 }
+
 .tab_list ul li a {
     padding: 0 15px;
 }
-.floor{
+
+.floor {
     margin-top: 30px;
 }
- .box_bd {
+
+.box_bd {
     height: 360px;
 }
-.tab_list_item >div {
+
+.tab_list_item>div {
     float: left;
     height: 361px;
 }
+
 .col_210 {
     width: 210px;
     background-color: #f9f9f9;
     text-align: center;
 }
-.col_210 ul li  {
+
+.col_210 ul li {
     float: left;
     width: 85px;
     height: 34px;
@@ -303,27 +357,34 @@
     line-height: 34px;
     margin-right: 10px;
 }
+
 .col_210 ul {
     padding-left: 12px;
 }
+
 .col_329 {
     width: 329px;
 }
+
 .col_221 {
     width: 221px;
     border-right: 1px solid #ccc;
 }
+
 .col_219 {
     width: 219px;
 }
+
 .bb {
     /* 一般情况下，a如果包含有宽度的盒子，a需要转换为块级元素 */
     display: block;
     border-bottom: 1px solid #ccc;
 }
-.shouji{
+
+.shouji {
     margin-top: 30px;
 }
+
 
 /* 电梯导航 */
 
@@ -336,6 +397,7 @@
     background-color: #fff;
     display: none;
 }
+
 .fixedtool li {
     height: 32px;
     line-height: 32px;
